Test and refactoring
