# server/balance/gin_server.go
@@ -1,10 +1,15 @@
 package balance
 
 import (
+	"encoding/json"
 	"fmt"
+	"io/ioutil"
+	"log"
 	"net/http"
 	"regexp"
 	"time"
+
+	_ "userbalance/docs"
 
 	// docs folder path generated by swag init
 
@@ -19,26 +24,24 @@ type ServerGin struct {
 	router              *gin.Engine
 	host                string
 	port                int
-	maxLastMessages     uint
+}
+
+type RequestMoveMoney struct {
+	UserId int     `json:"userid"`
+	Money  float64 `json:"money"`
 }
 
 type RequestUser struct {
 	Username string `json:"username"`
-	Password string `json:"password"`
+	Password string `json:"paswword"`
 }
 
-type RequestMessage struct {
-	ApiToken string `json:"api_token"`
-	Text     string `json:"text"`
+type TransferMoney struct {
+	UserIdTo   uint    `json:"UserIdTo"`
+	UserIdFrom uint    `json:"UserIdFrom"`
+	Money      float64 `json:"Money"`
 }
-type RequestMessages struct {
-	Messages []struct {
-		Id         uint      `json:"id"`
-		MemberName string    `json:"member_name"`
-		Text       string    `json:"text"`
-		Time       time.Time `json:"time"`
-	} `json:"messages"`
-}
+
 type RequestError struct {
 	Error string `json:"error"`
 }
@@ -48,31 +51,39 @@ type IChatServer interface {
 	Run()
 }
 
-func NewChatServerGin(host string, port int, maxLastMessages uint) *ServerGin {
-	chatServerGin := new(ServerGin)
-	chatServerGin.host = host
-	chatServerGin.port = port
-	chatServerGin.maxLastMessages = maxLastMessages
-	return chatServerGin
+func NewServerGin(host string, port int) *ServerGin {
+	ServerGin := new(ServerGin)
+	ServerGin.host = host
+	ServerGin.port = port
+
+	return ServerGin
 }
 
 func (serverGin *ServerGin) Use(userStorage IUserStorage, transactionsStorage ItransactionsStorage) {
 
 	serverGin.router = gin.Default()
+
 	serverGin.transactionsStorage = transactionsStorage
 	serverGin.userStorage = userStorage
 	// Конфигурируем все эндпоинты
 	serverGin.router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-	serverGin.router.POST("/api/user", userHandler(serverGin.userStorage))
-	// serverGin.router.POST("/api/messages", messagesHandler(serverGin.transactionsStorage, serverGin.userStorage, serverGin.maxLastMessages))
 	serverGin.router.GET("/api/health", heathHandler())
+	serverGin.router.POST("/api/user", userHandler(serverGin.userStorage))
+	serverGin.router.POST("/api/money", GetMoneyUserHadler(serverGin.userStorage))
+	serverGin.router.POST("/api/money?currency=USD", GetMoneyUserHadler(serverGin.userStorage))
+	serverGin.router.POST("/api/add", AddMoneyHandler(serverGin.transactionsStorage))
+	serverGin.router.POST("/api/reduce", ReduceMoneyHandler(serverGin.transactionsStorage))
+	serverGin.router.POST("/api/transfer", TransferMoneyHandler(serverGin.transactionsStorage))
+	// serverGin.router.GET("https://freecurrencyapi.net/api/v2/latest?apikey=d53f1180-94a8-11ec-992b-13a8f6f1bdf9&base_currency=USD",exchangeHandler())
+
 }
 
 func (serverGin *ServerGin) Run() error {
 	if serverGin.router == nil {
 		return fmt.Errorf("gin не сконфигурирован %v", serverGin.router)
 	}
-	return serverGin.router.Run()
+
+	return serverGin.router.Run(":8080")
 }
 
 // heathHandler godoc
@@ -129,55 +140,140 @@ func userHandler(userStorage IUserStorage) gin.HandlerFunc {
 			ctx.IndentedJSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
 			return
 		}
-
-		ctx.IndentedJSON(http.StatusCreated, gin.H{"username": userMode.Username})
+		usd := ctx.Param("currency")
+		if usd == "USD" {
+			rate := exchangeHandler()
+			userMode.Money = userMode.Money / rate
+			ctx.IndentedJSON(http.StatusCreated, gin.H{"username": userMode.Username, "money": userMode.Money})
+		}
+		ctx.IndentedJSON(http.StatusCreated, gin.H{"username": userMode.Username, "money": userMode.Money})
 	}
 
 }
 
-// messagesHandler godoc
-// @tags Get Info
-// @Summary messagesHandler
-// @Description Получить список сообщений
+// addMoneyHandler godoc
+// @tags Balance
+// @Summary addMoneyHandler
+// @Description Зачислить средства
 // @Produce json
-// @Param user body RequestApiToken true "User ApiToken"
-// @Router /api/messages [post]
-// func messagesHandler(transactionsStorage ItransactionsStorage, userStorage IUserStorage, maxLastMessages uint) gin.HandlerFunc {
-// 	return func(ctx *gin.Context) {
+// @Param user body RequestMoveMoney true "User Data"
+// @Router /api/add [post]
+func AddMoneyHandler(transactionsStorage ItransactionsStorage) gin.HandlerFunc {
+	return func(ctx *gin.Context) {
+		requestUser := new(RequestMoveMoney)
 
-// 		requestApiToken := new(RequestMessage)
+		statusCode, ctx2, checkBadRequest := validateClientRequest(ctx, requestUser)
 
-// 		statusCode, ctx2, checkBadRequest := validateClientRequest(ctx, requestApiToken)
-// 		if !checkBadRequest {
-// 			ctx.IndentedJSON(statusCode, ctx2)
-// 			return
-// 		}
+		if !checkBadRequest {
+			ctx.IndentedJSON(statusCode, ctx2)
+			return
+		}
 
-// 		messageModel, err := transactionsStorage.GetLast(maxLastMessages)
-// 		if err != nil {
-// 			type NewMessages struct {
-// 				Messages []string `json:"messages"`
-// 			}
-// 			empty := make([]string, 0)
-// 			emptyMembers := NewMessages{Messages: empty}
-// 			ctx.IndentedJSON(http.StatusOK, emptyMembers)
-// 			return
-// 		}
+		_, err := transactionsStorage.AddMoney(uint(requestUser.UserId), requestUser.Money)
+		if err != nil {
+			ctx.IndentedJSON(http.StatusForbidden, err.Error())
+			return
+		}
+		ctx.IndentedJSON(http.StatusOK, gin.H{"userId": requestUser.UserId, "money": requestUser.Money})
+	}
+}
 
-// 		newMessages := new(RequestMessages)
-// 		for _, u := range messageModel {
-// 			userModel, _ := userStorage.GetById(u.UserId)
-// 			newMessages.Messages = append(newMessages.Messages, struct {
-// 				Id         uint      "json:\"id\""
-// 				MemberName string    "json:\"member_name\""
-// 				Text       string    "json:\"text\""
-// 				Time       time.Time "json:\"time\""
-// 			}{u.ID, userModel.Username, u.Text, u.Time})
+// reduceMoneyHandler godoc
+// @tags Balance
+// @Summary reduceMoneyHandler
+// @Description Списать денежные средства
+// @Produce json
+// @Param user body RequestMoveMoney true "User Data"
+// @Router /api/reduce [post]
+func ReduceMoneyHandler(transactionsStorage ItransactionsStorage) gin.HandlerFunc {
+	return func(ctx *gin.Context) {
+		requestUser := new(RequestMoveMoney)
 
-// 		}
-// 		ctx.IndentedJSON(http.StatusOK, newMessages)
-// 	}
-// }
+		statusCode, ctx2, checkBadRequest := validateClientRequest(ctx, requestUser)
+
+		if !checkBadRequest {
+			ctx.IndentedJSON(statusCode, ctx2)
+			return
+		}
+
+		_, err := transactionsStorage.WriteOffMoney(uint(requestUser.UserId), requestUser.Money)
+		if err != nil {
+			ctx.IndentedJSON(http.StatusForbidden, err.Error())
+			return
+		}
+		ctx.IndentedJSON(http.StatusOK, gin.H{"userId": requestUser.UserId, "money": requestUser.Money})
+	}
+}
+
+// transferMoneyHandler godoc
+// @tags Balance
+// @Summary transferMoneyHandler
+// @Description Перевести деньги от пользователя к пользователю
+// @Produce json
+// @Param user body RequestMoveMoney true "User Data"
+// @Router /api/transfer [post]
+func TransferMoneyHandler(transactionsStorage ItransactionsStorage) gin.HandlerFunc {
+	return func(ctx *gin.Context) {
+		requestUser := new(TransferMoney)
+
+		statusCode, ctx2, checkBadRequest := validateClientRequest(ctx, requestUser)
+
+		if !checkBadRequest {
+			ctx.IndentedJSON(statusCode, ctx2)
+			return
+		}
+
+		_, err := transactionsStorage.TransferMoney(requestUser.UserIdFrom, requestUser.UserIdTo, requestUser.Money)
+		if err != nil {
+			ctx.IndentedJSON(http.StatusForbidden, err.Error())
+			return
+		}
+		ctx.IndentedJSON(http.StatusOK, gin.H{"userId": requestUser.UserIdFrom, "money": requestUser.Money})
+	}
+}
+
+// getMoneyUserHadler godoc
+// @tags Balance
+// @Summary getMoneyUserHadler
+// @Description Получить данные о балансе
+// @Produce json
+// @Param user body RequestUser true "User Data"
+// @Router /api/money [post]
+func GetMoneyUserHadler(userStorage IUserStorage) gin.HandlerFunc {
+	return func(ctx *gin.Context) {
+		requestUser := new(RequestUser)
+
+		statusCode, ctx2, checkBadRequest := validateClientRequest(ctx, requestUser)
+
+		if !checkBadRequest {
+			ctx.IndentedJSON(statusCode, ctx2)
+			return
+		}
+
+		userModel, err := userStorage.GetByName(requestUser.Username)
+		if err != nil {
+			ctx.IndentedJSON(http.StatusForbidden, err.Error())
+			return
+		}
+		ctx.IndentedJSON(http.StatusOK, userModel)
+	}
+}
+
+func exchangeHandler() float64 {
+	resp, err := http.Get("https://freecurrencyapi.net/api/v2/latest?apikey=d53f1180-94a8-11ec-992b-13a8f6f1bdf9&base_currency=USD")
+	if err != nil {
+		log.Fatalln(err)
+	}
+	var dd interface{}
+	body, err := ioutil.ReadAll(resp.Body)
+	if err != nil {
+		log.Fatalln(err)
+	}
+
+	log.Println(string(body))
+	json.Unmarshal(body, dd)
+	return 80
+}
 
 func validatenUserName(userName string) bool {
 	var validPath = regexp.MustCompile(`^[a-zA-Z0-9]+$`).MatchString
@@ -186,11 +282,6 @@ func validatenUserName(userName string) bool {
 
 func validatePassword(password string) bool {
 	return len(password) < 32
-}
-
-func checkUserPassword(userName string, password string, userStorage IUserStorage) bool {
-	userModel, err := userStorage.GetByName(userName)
-	return err == nil && userModel.PasswordHash == new(PasswordHasherSha1).CalculateHash(password)
 }
 
 func validateClientRequest(ctx *gin.Context, requestData interface{}) (int, interface{}, bool) {
